rustdocs/errors/rust-bitcoin-p2p-src-consensus.rs.txt
error[E0432]: unresolved import `impl_consensus_encoding`
  --> ../rust-bitcoin/p2p/src/consensus.rs:57:16
   |
57 | pub(crate) use impl_consensus_encoding;
   |                ^^^^^^^^^^^^^^^^^^^^^^^ no `impl_consensus_encoding` in the root

error[E0433]: failed to resolve: use of unresolved module or unlinked crate `bitcoin`
  --> ../rust-bitcoin/p2p/src/consensus.rs:14:56
   |
14 | ... -> bitcoin::consensus::encode::Error {
   |        ^^^^^^^ use of unresolved module or unlinked crate `bitcoin`
   |
   = help: you might be missing a crate named `bitcoin`

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0432, E0433.
For more information about an error, try `rustc --explain E0432`.
